[package]
name = "cs_1666_project"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = "0.8.0"

[dependencies.sdl2]
version = "0.34.5"
features = ["ttf","image","mixer"]

[lib]
name = "rogue_sdl"
path = "src/lib.rs"
